--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <!--MI CSS-->
   <link rel="stylesheet" href="./css/main.css">
-  <title>INDEX :: Patagonia MÁGICA</title>
+  <title>REMERAS :: Patagonia MÁGICA</title>
 </head>
 
 <body>
@@ -133,13 +133,13 @@
         <div class="row mx-4">
           <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12">
           <!--Start Card cangrejo-->
-          <div class="cards text-center">
+          <div class="cards">
             
             <img src="./assets/card-img-cangrejo.png" alt="cangrejo_nadador" class="cards__img">
-            <h2 class="cards__title color-05">Cangrejo Nadador</h2>
-            <h3 class="cards__subtitle color-05">(Ovalipes trimaculatus)</h3>
+            <h2 class="cards__title">Cangrejo Nadador</h2>
+            <h3 class="cards__subtitle">(Ovalipes trimaculatus)</h3>
             <p class="cards__description">Viven en todas la la Patagonia argentina.</p>
-            <button class="btn-custom-pm">
+            <button class="cards__btn">
             DESCARGAR<img src="./assets/downloads-icon.png" class="cards__button__img"
             alt="downloads-icon"></button>
           </div>
@@ -151,10 +151,10 @@
             <div class="cards">
               <!-- Añadí d-flex y flex-column para alinear verticalmente -->
               <img src="./assets/card-img-pinguino.png" alt="pinguino_papua" class="cards__img">
-              <h2 class="cards__title color-05">Pinguino Papua</h2>
-              <h3 class="cards__subtitle color-05">(Pygoscelis papua)</h3>
+              <h2 class="cards__title">Pinguino Papua</h2>
+              <h3 class="cards__subtitle">(Pygoscelis papua)</h3>
               <p class="cards__description">Encuéntralos en Islas Malvinas</p>
-              <button class="btn-custom-pm">
+              <button class="cards__btn">
               DESCARGAR<img src="./assets/downloads-icon.png" class="cards__button__img"
               alt="downloads-icon"></button>
             </div>
@@ -166,10 +166,10 @@
               <div class="cards">
                 <!-- Añadí d-flex y flex-column para alinear verticalmente -->
                 <img src="./assets/card-img-tortuga.png" alt="tortuga_verde" class="cards__img">
-                <h2 class="cards__title color-05">Tortuga Verde</h2>
-                <h3 class="cards__subtitle color-05">(Chelonia mydas)</h3>
+                <h2 class="cards__title">Tortuga Verde</h2>
+                <h3 class="cards__subtitle">(Chelonia mydas)</h3>
                 <p class="cards__description">Las encuentras en el Atlántico Occidental</p>
-                <button class="btn-custom-pm">
+                <button class="cards__btn">
                 DESCARGAR<img src="./assets/downloads-icon.png" class="cards__button__img"
                 alt="downloads-icon"></button>
               </div>
@@ -181,10 +181,10 @@
                 <div class="cards">
                   <!-- Añadí d-flex y flex-column para alinear verticalmente -->
                   <img src="./assets/card-img-orca.png" alt="orca" class="cards__img">
-                  <h2 class="cards__title color-05">Orca</h2>
-                  <h3 class="cards__subtitle color-05">(Orcinus Orca)</h3>
+                  <h2 class="cards__title">Orca</h2>
+                  <h3 class="cards__subtitle">(Orcinus Orca)</h3>
                   <p class="cards__description">Puedes avistarlas en la Península Valdés</p>
-                  <button class="btn-custom-pm">
+                  <button class="cards__btn">
                   DESCARGAR<img src="./assets/downloads-icon.png" class="cards__button__img"
                   alt="downloads-icon"></button>
                 </div>
@@ -291,7 +291,7 @@
 
 
 <!--FOOTER-->
-    <footer class="container-fluid p-0 ">
+    <footer class="container-fluid p-0">
       <div class="row">
         <div class="col-12">
           <footer class="footer-flex">
