arregle detalles de responsive que se veian muy desacomodados y tambien arregle imagenes rotas

--- a/index.html
+++ b/index.html
@@ -94,60 +94,68 @@
     <!--START Section que hacemos-->
     <section class="row">
       <!--Div con Imagen-->
-      <div class="col-xxl-6 col-xl-12 col-lg-12 col-md-12 col-sm-12"> <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="../assets/c-index-img-1-no.png" class="d-block w-100" alt="Mision01-no-img">
+      <div class="col-xxl-6 col-xl-12 col-lg-12 col-md-12 col-sm-12">
+        <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="./assets/c-index-img-1-no.png" class="d-block w-100" alt="Mision01-no-img">
+            </div>
+            <div class="carousel-item">
+              <img src="./assets/c-index-img-1-si.png" class="d-block w-100" alt="Mision01-si-img">
+            </div>
+            <div class="carousel-item">
+              <img src="./assets/c-index-img-2-no.png" class="d-block w-100" alt="Mision02-no-img">
+            </div>
+            <div class="carousel-item">
+              <img src="./assets/c-index-img-2-si.png" class="d-block w-100" alt="Mision02-si-img">
+            </div>
+            <div class="carousel-item">
+              <img src="./assets/c-index-img-3-no.png" class="d-block w-100" alt="Mision03-no-img">
+            </div>
+            <div class="carousel-item">
+              <img src="./assets/c-index-img-3-si.png" class="d-block w-100" alt="Mision03-si-img">
+            </div>
+            <div class="carousel-item">
+              <img src="./assets/c-index-img-4-no.png" class="d-block w-100" alt="Mision04-no-img">
+            </div>
+            <div class="carousel-item">
+              <img src="./assets/c-index-img-4-si.png" class="d-block w-100" alt="Mision04-si-img">
+            </div>
           </div>
-          <div class="carousel-item">
-            <img src="../assets/c-index-img-1-si.png" class="d-block w-100" alt="Mision01-si-img">
-          </div>
-          <div class="carousel-item">
-            <img src="../assets/c-index-img-2-no.png" class="d-block w-100" alt="Mision02-no-img">
-          </div>
-          <div class="carousel-item">
-            <img src="../assets/c-index-img-2-si.png" class="d-block w-100" alt="Mision02-si-img">
-          </div>
-          <div class="carousel-item">
-            <img src="../assets/c-index-img-3-no.png" class="d-block w-100" alt="Mision03-no-img">
-          </div>
-          <div class="carousel-item">
-            <img src="../assets/c-index-img-3-si.png" class="d-block w-100" alt="Mision03-si-img">
-          </div>
-          <div class="carousel-item">
-            <img src="../assets/c-index-img-4-no.png" class="d-block w-100" alt="Mision04-no-img">
-          </div>
-          <div class="carousel-item">
-            <img src="../assets/c-index-img-4-si.png" class="d-block w-100" alt="Mision04-si-img">
-          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
-          data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
-          data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div></div>
+      </div>
       <!--Div con Editorial-->
       <div class="col-xxl-6 col-xl-12 col-lg-12 col-md-12 col-sm-12">
         <article class="custom-margin8">
           <h2 class="txt-left pat__titulo-03b pat__color-05 txt-spacetop">Nuestra Misión</h2>
-          <p class="txt-left pat__titulo-04r">En <strong>Patagonia Mágica</strong>, 
-            estamos comprometidos con la conservación y el respeto hacia nuestras especies marinas 
-            en las aguas de la <strong>Patagonia Argentina</strong>.</p> 
-            <p class="txt-left pat__titulo-04r"><strong>Nuestra misión</strong> es inspirar a las generaciones 
-            futuras a cuidar y proteger el increíble ecosistema marino de nuestra región 
+          <p class="txt-left pat__titulo-04r">En <strong>Patagonia Mágica</strong>,
+            estamos comprometidos con la conservación y el respeto hacia nuestras especies marinas
+            en las aguas de la <strong>Patagonia Argentina</strong>.</p>
+          <p class="txt-left pat__titulo-04r"><strong>Nuestra misión</strong> es inspirar a las generaciones
+            futuras a cuidar y proteger el increíble ecosistema marino de nuestra región
             a través de actividades educativas, recursos interactivos y experiencias emocionantes. </p>
-            <p class="txt-left pat__titulo-04r txt-spacebottom">Nos esforzamos por crear un espacio donde la magia del océano se encuentre con el 
-            compromiso de la comunidad, trabajando juntos para preservar este valioso patrimonio 
+          <p class="txt-left pat__titulo-04r txt-spacebottom">Nos esforzamos por crear un espacio donde la magia del
+            océano se encuentre con el
+            compromiso de la comunidad, trabajando juntos para preservar este valioso patrimonio
             natural para las generaciones venideras."</p>
-            <a href="./pages/contacto.html" class="submit-btn-contact txt-spacetop-double">
-              ¡Contactanos y te lo contamos en persona!
-          </a>
+          <p class="txt-left pat__titulo-04r txt-spacebottom">En Patagonia Mágica, creemos en el poder de la
+            colaboración y la
+            participación comunitaria. Trabajamos incansablemente para crear un espacio donde la magia del océano se
+            entrelace
+            con el compromiso de la comunidad. Nos enorgullece ver cómo las personas se unen, compartiendo su amor y
+            pasión
+            por el mar y trabajando juntas para proteger este valioso patrimonio natural para las generaciones
+            venideras.
         </article>
       </div>
     </section>
@@ -156,11 +164,11 @@
     <section class="row">
       <!--Div con Imagen-->
       <div class="col-xxl-6 col-xl-12 col-lg-12 col-md-12 col-sm-12"><img src="./assets/banner-como.png"
-          class="d-block w-100" alt="editorial-img"></div>
+          class="custom-image1" alt="editorial-img"></div>
       <!--Div con Editorial-->
       <div class="col-xxl-6 col-xl-12 col-lg-12 col-md-12 col-sm-12">
         <article class="custom-margin8">
-          <h2 class="txt-left pat__titulo-03b pat__color-05">¿Cómo lo hacemos?</h2>
+          <h2 class="txt-left pat__titulo-03b pat__color-05 txt-spacetop">¿Cómo lo hacemos?</h2>
           <p class="txt-left pat__titulo-04r">En <strong>Patagonia Mágica</strong>, disponemos de varios
             medios para concretar nuestra misión:
           <ul class="txt-left pat__titulo-04r ">
@@ -168,18 +176,19 @@
             <li>Visitas a Instituciones Educativas</li>
             <li>Visitas a Reservas Naturales</li>
             <li>Orientación pedagógica a docentes</li>
-          </ul></p>
-          <p class="txt-left pat__titulo-04r txt-spacebottom">A través de estos recursos, buscamos llegar a más personas y generar un impacto positivo en 
-          la conciencia y la acción hacia la conservación marina en la Patagonia
+          </ul>
+          </p>
+          <p class="txt-left pat__titulo-04r txt-spacebottom">A través de estos recursos, buscamos llegar a más personas
+            y generar un impacto positivo en
+            la conciencia y la acción hacia la conservación marina en la Patagonia
           </p>
           <a href="./pages/contacto.html" class="submit-btn-contact txt-spacetop-double">
-            ¡Contactanos y te lo contamos en persona!
-        </a>
-        <p class="txt-left pat__titulo-04r txt-spacetop">Todos los productos que comercializamos
-          destinan su recaudacion a las fundaciones que trabajan dia a dia para conservar este hermoso
-          ecosistema austral y cumplen las siguientes normas de calidad.
-          <img src="../assets/logos-eco.png" alt="Mision04-no-img">
-          </p>
+            ¡Contactanos!
+          </a>
+          <p class="txt-left pat__titulo-04r txt-spacetop">Todos los productos que comercializamos
+            destinan su recaudacion a las fundaciones que trabajan dia a dia para conservar este hermoso
+            ecosistema austral y cumplen las siguientes normas de calidad.</p>
+          <div><img src="../assets/logos-eco.png" class="custom-image1" alt="Mision04-no-img"></div>
         </article>
       </div>
     </section>
@@ -298,7 +307,7 @@
     <div class="row">
       <div class="col-12">
         <!--start accordeon boostrap-->
-        <div class="accordion custom-margin" id="accordionExample">
+        <div class="accordion custom-margin-faqs" id="accordionExample">
           <div class="accordion-item">
             <h2 class="accordion-header">
               <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
