--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -88,7 +88,7 @@
     <div class="row">
       <!--Start Columna banner-->
       <aside class="col-xxl-6 col-xl-12 col-lg-12 col-md-12 col-sm-12 txt-right txt-padding">
-        <div><img src="../assets/banner-contacto.png" alt="bannercontacto-img"></div>
+        <div><img src="../assets/banner-contacto.png" class="custom-image1" alt="bannercontacto-img"></div>
       </aside>
       <!--End Columna banner-->
       <!--Start Columna form-->
