--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -86,44 +86,48 @@
     <div class="row divisor-01"></div>
   </div>
   <!--START MAIN-->
-  <main class="container-fluid custom-margin">
+  <main class="container-fluid">
     <div class="row">
-      <div class="col-xxl-6 col-xl-12 col-lg-12 col-md-12 col-sm-12 txt-right txt-padding">
+      <div class="col-xxl-6 col-xl-12 col-lg-12 col-md-12 col-sm-12 txt-padding">
         <!--START CARROUSEL QUIENES SOMOS-->
-        <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="../assets/c-qui-img-1.png" class="d-block w-100" alt="QuienesSomos01-img">
+        <div class="custom-carousel">
+          <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="../assets/c-qui-img-1.png" class="d-block w-100" alt="QuienesSomos01-img">
+              </div>
+              <div class="carousel-item">
+                <img src="../assets/c-qui-img-2.png" class="d-block w-100" alt="QuienesSomos02-img">
+              </div>
+              <div class="carousel-item">
+                <img src="../assets/c-qui-img-3.png" class="d-block w-100" alt="QuienesSomos03-img">
+              </div>
+              <div class="carousel-item">
+                <img src="../assets/c-qui-img-4.png" class="d-block w-100" alt="QuienesSomos04-img">
+              </div>
+              <div class="carousel-item">
+                <img src="../assets/c-qui-img-5.png" class="d-block w-100" alt="QuienesSomos05-img">
+              </div>
             </div>
-            <div class="carousel-item">
-              <img src="../assets/c-qui-img-2.png" class="d-block w-100" alt="QuienesSomos02-img">
-            </div>
-            <div class="carousel-item">
-              <img src="../assets/c-qui-img-3.png" class="d-block w-100" alt="QuienesSomos03-img">
-            </div>
-            <div class="carousel-item">
-              <img src="../assets/c-qui-img-4.png" class="d-block w-100" alt="QuienesSomos04-img">
-            </div>
-            <div class="carousel-item">
-              <img src="../assets/c-qui-img-5.png" class="d-block w-100" alt="QuienesSomos05-img">
-            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+              data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+              data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
           </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
+          <aside>
+            <p class="txt-center pat__titulo-03b txt-spacetop">Las fundaciones que nos acompañan:</p>
+            <div class="txt-spacetop txt-center"><img src="../assets/fundaciones.png" class="custom-image1"
+                alt="fundaciones-img"></div>
+          </aside>
         </div>
+
         <!--END CARROUSEL QUIENES SOMOS-->
-        <aside>
-          <p class="txt-center pat__titulo-03b txt-spacetop">Las fundaciones que nos acompañan:</p>
-          <div class="txt-spacetop txt-center"><img src="../assets/fundaciones.png" alt="fundaciones-img"></div>
-        </aside>
       </div>
       <div class="col-xxl-6 col-xl-12 col-lg-12 col-md-12 col-sm-12 txt-padding">
         <!--Start Texto Quienes Somos-->
@@ -157,6 +161,7 @@
         <!--End Texto Quienes Somos-->
       </div>
       <!--End Columna form-->
+    </div>
   </main>
   <!--START MAIN-->
   <!--START FOOTER-->
