me quedo mal la ruta de una imagen

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
           <p class="txt-left pat__titulo-04r txt-spacetop">Todos los productos que comercializamos
             destinan su recaudacion a las fundaciones que trabajan dia a dia para conservar este hermoso
             ecosistema austral y cumplen las siguientes normas de calidad.</p>
-          <div><img src="../assets/logos-eco.png" class="custom-image1" alt="Mision04-no-img"></div>
+          <div><img src="./assets/logos-eco.png" class="custom-image1" alt="Mision04-no-img"></div>
         </article>
       </div>
     </section>
